--- a/appstate.json
+++ b/appstate.json
@@ -1,40 +1,39 @@
-
 [
     {
         "key": "dbln",
-        "value": "%7B%2261567656868605%22%3A%227HSHRFCm%22%2C%2261565360981953%22%3A%22I91rWyPw%22%2C%2261567938668419%22%3A%229UaXTJEp%22%7D",
+        "value": "%7B%22100039840451887%22%3A%22UQeKcNW4%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
     },
     {
         "key": "datr",
-        "value": "dn4YZ5VDFYZBLK5O_9o-mK8x",
+        "value": "T7glZ1fKP5e_QBRXTDzBnWk5",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
     },
     {
         "key": "sb",
-        "value": "dn4YZzWXfoaKo-baw5BNXe4L",
+        "value": "T7glZ-1SrAvSoHnKEPXaZQiK",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
     },
     {
         "key": "vpd",
-        "value": "v1%3B494x266x2.701960802078247",
+        "value": "v1%3B677x360x1.6187498569488525",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
     },
     {
         "key": "ps_l",
@@ -42,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
     },
     {
         "key": "ps_n",
@@ -51,70 +50,70 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2667%3Btimestamp%3A1731126355",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
-    },
-    {
-        "key": "m_pixel_ratio",
-        "value": "2.701960802078247",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
-    },
-    {
-        "key": "wd",
-        "value": "266x494",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
     },
     {
         "key": "c_user",
-        "value": "61565360981953",
+        "value": "100039840451887",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
     },
     {
         "key": "fr",
-        "value": "0BYH5fYCnwxCLDZmO.AWXLvOOIeF5u_a4q6htLa7I64iQ.BnGH52..AAA.0.0.BnL5lV.AWU3oGrF0qI",
+        "value": "02jriT7tDQuoPJb5t.AWV03uPOWfMsXCv7wYXR7UkhD9s.BnJbhP..AAA.0.0.BnLk1r.AWVgc29piqE",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
     },
     {
         "key": "xs",
-        "value": "23%3AHoGHRJRsdDPvlg%3A2%3A1731172693%3A-1%3A5905",
+        "value": "50%3A8c0RdFTEJ5BV9g%3A2%3A1731087723%3A-1%3A4628",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
     },
     {
         "key": "locale",
-        "value": "en_GB",
+        "value": "hi_IN",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-09T17:26:10.517Z",
-        "lastAccessed": "2024-11-09T17:26:10.517Z"
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
+    },
+    {
+        "key": "wd",
+        "value": "445x836",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101230495%3BT%3A28852856",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2668%3Btimestamp%3A1731171379",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-09T17:42:48.580Z",
+        "lastAccessed": "2024-11-09T17:42:48.580Z"
     }
-      ]
+]
