--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-11-10T15:38:55.659Z",
-        "lastAccessed": "2024-11-10T15:38:55.659Z"
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T15:38:55.659Z",
-        "lastAccessed": "2024-11-10T15:38:55.659Z"
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
     },
     {
         "key": "dpr",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T15:38:55.659Z",
-        "lastAccessed": "2024-11-10T15:38:55.659Z"
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
     },
     {
         "key": "sb",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T15:38:55.659Z",
-        "lastAccessed": "2024-11-10T15:38:55.659Z"
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
     },
     {
         "key": "vpd",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T15:38:55.659Z",
-        "lastAccessed": "2024-11-10T15:38:55.659Z"
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
     },
     {
         "key": "locale",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T15:38:55.659Z",
-        "lastAccessed": "2024-11-10T15:38:55.659Z"
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
     },
     {
         "key": "c_user",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T15:38:55.659Z",
-        "lastAccessed": "2024-11-10T15:38:55.659Z"
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
     },
     {
         "key": "fr",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T15:38:55.659Z",
-        "lastAccessed": "2024-11-10T15:38:55.659Z"
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
     },
     {
         "key": "xs",
@@ -77,8 +77,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T15:38:55.659Z",
-        "lastAccessed": "2024-11-10T15:38:55.659Z"
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
     },
     {
         "key": "wd",
@@ -86,25 +95,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T15:38:55.659Z",
-        "lastAccessed": "2024-11-10T15:38:55.659Z"
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
     },
     {
         "key": "fbl_st",
-        "value": "101236798%3BT%3A28854091",
+        "value": "101528391%3BT%3A28854223",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T15:38:55.659Z",
-        "lastAccessed": "2024-11-10T15:38:55.659Z"
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2668%3Btimestamp%3A1731245500",
+        "value": "v2%3Bclient_version%3A2668%3Btimestamp%3A1731253434",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T15:38:55.659Z",
-        "lastAccessed": "2024-11-10T15:38:55.659Z"
+        "creation": "2024-11-10T15:44:07.490Z",
+        "lastAccessed": "2024-11-10T15:44:07.490Z"
     }
 ]
