--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
     "PASSWORD": "",
     "OTPKEY": "",
     "BOTNAME": "➺ 🌸𒁍𝘽𝙊𝙏 𝙅𝘼𝙉𝙐🥀",
-    "PREFIX": ".",
+    "PREFIX": "#",
     "ADMINBOT": [
         "",
         "",
