--- a/config.json
+++ b/config.json
@@ -15,34 +15,34 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "〖 # 〗 ➺ 🌸𒁍आदि बाबू",
-    "PREFIX": "#",
+    "BOTNAME": "〖 . 〗 ➺𝐁𝐎𝐓 𝐉𝐀𝐍𝐔🥀",
+    "PREFIX": ".",
     "OTHERBOT": [
         ""
     ],
     "UNSENTVIP": [
-        "100093685579556",
-        "100010492052172",
+        "100016828397863",
+        "100016828397863",
         "",
         "",
         ""
     ],
     "GOD": [
-        "100093685579556",
-        "100010492052172",
+        "100016828397863",
+        "100016828397863",
         ""
     ],
     "ADMINBOT": [
         "",
-        "100010492052172",
-        "100093685579556",
+        "100016828397863",
+        "100016828397863",
         "",
         "",
         "",
         ""
     ],
-    "OWNER": "𝕻𝖗𝖎𝖞𝖆𝖓𝖘𝖍 𝕽𝖆𝖏𝖕𝖚𝖙",
-    "AGE": "21",
+    "OWNER": "𝐒𝐇𝐀𝐀𝐍 𝐊𝐇𝐀𝐍 𝐊",
+    "AGE": "24",
     "GENDER": "𝗠𝗮𝗟𝗲",
     "FACEBOOK": "https://www.facebook.com/profile.php?id=100010492052172&mibextid=ZbWKwL",
     "AutoOffBot": "disable",
@@ -53,7 +53,7 @@
     "AutoGreetWithSticker": "enable",
     "AutoGreetSendPerHour": "1",
     "AutoPost": "disable",
-    "AutoPostText": "༻𝐎𝐖𝐍𝐄𝐑:- ☞𝐁𝐑𝐎𝐊𝐄𝐍 𝐀𝐀𝐃𝐈☜ ༺ ༒𝚈𝚘𝚞 𝙲𝚊𝚗 𝙲𝚊𝚕𝚕 𝙷𝚒𝚖 〠𝐀𝐀𝐃𝐈〠.༒ ༒𝐇𝐢𝐬 𝐅𝐚𝐜𝐞𝐛𝐨𝐨𝐤 𝐢𝐝༒:- ☞ www.facebook.com/profile.php?id=100010492052172 ☜ ֎𝘍𝘰𝘳 𝘈𝘯𝘺 𝘒𝘪𝘯𝘥 𝘖𝘧 𝘏𝘦𝘭𝘱 :- https://www.instagram.com/aadi_singh__143?igsh=MXVneXZ6bzR4bHhvcg==☜",
+    "AutoPostText": "༻𝐎𝐖𝐍𝐄𝐑:- ☞𝐒𝐇𝐀𝐀𝐍☜ ༺ ༒𝚈𝚘𝚞 𝙲𝚊𝚗 𝙲𝚊𝚕𝚕 𝙷𝚒𝚖 〠𝐒𝐇𝐀𝐍𝐈〠.༒ ༒𝐇𝐢𝐬 𝐅𝐚𝐜𝐞𝐛𝐨𝐨𝐤 𝐢𝐝༒:- ☞ www.facebook.com/profile.php?id=100016828397863 ☜ ֎𝘍𝘰𝘳 𝘈𝘯𝘺 𝘒𝘪𝘯𝘥 𝘖𝘧 𝘏𝘦𝘭𝘱 :- https://www.instagram.com/shankhnk__345?igsh=MXVneXZ6bzR4bHhvcg==☜",
     "AutoPostPerHour": "1",
     "AutoPostGreet": "disable",
     "AutoPostGreetPostPerHour": "6",
@@ -64,7 +64,7 @@
     "AutoPendingGroupChat": "accept",
     "AutoBioStatus": "enable",
     "AutoBioStatusSetPerHour": "1",
-    "BioStatus": "༻𝐎𝐖𝐍𝐄𝐑:- ☞𝐁𝐑𝐎𝐊𝐄𝐍 𝐀𝐀𝐃𝐈☜ ༺ ༒𝚈𝚘𝚞 𝙲𝚊𝚗 𝙲𝚊𝚕𝚕 𝙷𝚒𝚖 〠𝐀𝐀𝐃𝐈〠.༒ ༒𝐇𝐢𝐬 𝐅𝐚𝐜𝐞𝐛𝐨𝐨𝐤 𝐢𝐝༒:- ☞ www.facebook.com/profile.php?id=100010492052172 ☜ ֎𝘍𝘰𝘳 𝘈𝘯𝘺 𝘒𝘪𝘯𝘥 𝘖𝘧 𝘏𝘦𝘭𝘱 :- https://www.instagram.com/aadi_singh__143?igsh=MXVneXZ6bzR4bHhvcg==☜",
+    "BioStatus": "༻𝐎𝐖𝐍𝐄𝐑:- ☞𝐒𝐇𝐀𝐀𝐍☜ ༺ ༒𝚈𝚘𝚞 𝙲𝚊𝚗 𝙲𝚊𝚕𝚕 𝙷𝚒𝚖 〠𝐒𝐇𝐀𝐍𝐈〠.༒ ༒𝐇𝐢𝐬 𝐅𝐚𝐜𝐞𝐛𝐨𝐨𝐤 𝐢𝐝༒:- ☞ www.facebook.com/profile.php?id=100016828397863 ☜ ֎𝘍𝘰𝘳 𝘈𝘯𝘺 𝘒𝘪𝘯𝘥 𝘖𝘧 𝘏𝘦𝘭𝘱 :- https://www.instagram.com/shankhank__345?igsh=MXVneXZ6bzR4bHhvcg==☜",
     "AutoLeave": "enable",
     "RandomRedditMemes": "enable",
     "RandomRedditMemesSendPerHour": "1",
