--- a/appstate.json
+++ b/appstate.json
@@ -1,66 +1,48 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261565360981953%22%3A%22sYPk5ScR%22%7D",
+        "value": "%7B%2261567653883923%22%3A%22fwLQLzwQ%22%2C%2261568154007510%22%3A%223TqtsoQK%22%2C%2261568319601483%22%3A%22TMsiJLsF%22%2C%22100054481274048%22%3A%22GR4FSqoG%22%2C%2261568344566695%22%3A%22JhZ3viT8%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-11-10T16:52:40.273Z",
-        "lastAccessed": "2024-11-10T16:52:40.273Z"
+        "creation": "2024-11-11T08:15:43.228Z",
+        "lastAccessed": "2024-11-11T08:15:43.228Z"
     },
     {
         "key": "datr",
-        "value": "GKEvZ3ViQgKhGhqIds_pi5Jw",
+        "value": "73iSZprEu0WqCnCaL6ykOVvM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T16:52:40.273Z",
-        "lastAccessed": "2024-11-10T16:52:40.273Z"
+        "creation": "2024-11-11T08:15:43.228Z",
+        "lastAccessed": "2024-11-11T08:15:43.228Z"
+    },
+    {
+        "key": "dpr",
+        "value": "3.0234789848327637",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-11T08:15:43.228Z",
+        "lastAccessed": "2024-11-11T08:15:43.228Z"
     },
     {
         "key": "sb",
-        "value": "GKEvZ41U0qgjGf3oPDSxRb29",
+        "value": "73iSZhC4p4sZ4uFieSjWjdnz",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T16:52:40.273Z",
-        "lastAccessed": "2024-11-10T16:52:40.273Z"
+        "creation": "2024-11-11T08:15:43.228Z",
+        "lastAccessed": "2024-11-11T08:15:43.228Z"
     },
     {
-        "key": "wd",
-        "value": "266x494",
+        "key": "vpd",
+        "value": "v1%3B754x393x2.75",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T16:52:40.273Z",
-        "lastAccessed": "2024-11-10T16:52:40.273Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61565360981953",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-10T16:52:40.273Z",
-        "lastAccessed": "2024-11-10T16:52:40.273Z"
-    },
-    {
-        "key": "fr",
-        "value": "0V04IkBNz3iiBWwz4.AWUb3o7S7D63vVEgaI3fy7OxK0s.BnL6EY..AAA.0.0.BnL6Pc.AWXka85Dq2o",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-10T16:52:40.273Z",
-        "lastAccessed": "2024-11-10T16:52:40.273Z"
-    },
-    {
-        "key": "xs",
-        "value": "50%3AQt6gQv6nmktptg%3A2%3A1731175391%3A-1%3A5905",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-10T16:52:40.273Z",
-        "lastAccessed": "2024-11-10T16:52:40.273Z"
+        "creation": "2024-11-11T08:15:43.228Z",
+        "lastAccessed": "2024-11-11T08:15:43.228Z"
     },
     {
         "key": "locale",
@@ -68,34 +50,61 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T16:52:40.273Z",
-        "lastAccessed": "2024-11-10T16:52:40.273Z"
+        "creation": "2024-11-11T08:15:43.228Z",
+        "lastAccessed": "2024-11-11T08:15:43.228Z"
     },
     {
-        "key": "vpd",
-        "value": "v1%3B494x266x2.701960802078247",
+        "key": "c_user",
+        "value": "100054481274048",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T16:52:40.273Z",
-        "lastAccessed": "2024-11-10T16:52:40.273Z"
+        "creation": "2024-11-11T08:15:43.228Z",
+        "lastAccessed": "2024-11-11T08:15:43.228Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2668%3Btimestamp%3A1731257501",
+        "key": "fr",
+        "value": "1DzeeL6jEXlIH9bnJ.AWW9RX3bfT07aT9WCT8Gv3bZ0qE.BnK4yR..AAA.0.0.BnMJbP.AWXuypgKQHM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T16:52:40.273Z",
-        "lastAccessed": "2024-11-10T16:52:40.273Z"
+        "creation": "2024-11-11T08:15:43.228Z",
+        "lastAccessed": "2024-11-11T08:15:43.228Z"
+    },
+    {
+        "key": "xs",
+        "value": "34%3AbCgBEYebLSOKTg%3A2%3A1731237583%3A-1%3A4159",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-11T08:15:43.228Z",
+        "lastAccessed": "2024-11-11T08:15:43.228Z"
+    },
+    {
+        "key": "wd",
+        "value": "393x754",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-11T08:15:43.228Z",
+        "lastAccessed": "2024-11-11T08:15:43.228Z"
     },
     {
         "key": "fbl_st",
-        "value": "100436441%3BT%3A28854292",
+        "value": "101339255%3BT%3A28855000",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-10T16:52:40.273Z",
-        "lastAccessed": "2024-11-10T16:52:40.273Z"
+        "creation": "2024-11-11T08:15:43.228Z",
+        "lastAccessed": "2024-11-11T08:15:43.228Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2669%3Btimestamp%3A1731300027",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-11T08:15:43.228Z",
+        "lastAccessed": "2024-11-11T08:15:43.228Z"
     }
 ]
